--- a/TnTComponents/Form/TnTInputFile.razor
+++ b/TnTComponents/Form/TnTInputFile.razor
@@ -18,18 +18,18 @@
     }
 
     @if (!string.IsNullOrWhiteSpace(Label)) {
-    <span class="tnt-label">
-        @Label
-    </span>
+        <span class="tnt-label">
+            @Label
+        </span>
     }
 
     @if (EndIcon is not null) {
         @EndIcon.Render("tnt-end-icon")
     }
 
-    @if(ShowProgress) {
+    @if (ShowProgress && !string.IsNullOrWhiteSpace(ProgressTitle)) {
         <div class="tnt-input-progress">
-            @if(ProgressTemplate is not null) {
+            @if (ProgressTemplate is not null) {
                 @ProgressTemplate(ProgressPercent > 0 ? ProgressFileDetails with { Percentage = ProgressPercent } : new ProgressFileDetails())
             }
             else {
