--- a/TnTComponents/Form/TnTInputFile.razor.scss
+++ b/TnTComponents/Form/TnTInputFile.razor.scss
@@ -65,9 +65,149 @@ $on-tint-color: var(--tnt-input-on-tint-color);
     }
 
     @include base.invalid;
-    @include base.outlined;
-    @include base.filled;
 
+    &.tnt-form-outlined {
+        border-radius: 4px;
+        background-color: transparent;
+        grid-template-rows: 56px;
+        outline: 1px solid colors.$tnt-color-outline;
+
+        &:before, &:after {
+            content: '';
+            position: absolute;
+            width: calc(100% + 2px);
+            background-color: transparent;
+            border-radius: 4px;
+            box-sizing: border-box;
+            border-color: base.$tint-color;
+            border-style: solid;
+            border-radius: inherit;
+            height: calc(100% + 2px);
+            top: -1px;
+            left: -1px;
+            transition: 250ms ease-in-out;
+        }
+
+        &:before {
+            border-left-width: 2px;
+            border-right-width: 2px;
+            border-top-width: 0;
+            border-bottom-width: 0;
+            transform: rotateX(90deg);
+        }
+
+        &:after {
+            border-top-width: 2px;
+            border-bottom-width: 2px;
+            border-left-width: 0;
+            border-right-width: 0;
+            transform: rotateY(90deg);
+        }
+
+        &:hover {
+            background-color: color-mix(in srgb, base.$tint-color 15%, transparent);
+        }
+
+        &:has(input:focus), &:has(input:active) {
+            &:before {
+                transform: rotateX(0deg);
+            }
+
+            &:after {
+                transform: rotateY(0deg);
+            }
+        }
+
+        &:has(.tnt-label) {
+            &:has(input:not(:placeholder-shown)), &:has(input:focus), &:has(input:active), &.tnt-placeholder {
+
+                .tnt-label {
+                    transform-origin: left;
+                    background-color: base.$background-color;
+                    padding: 0 4px;
+                }
+
+                &:not(:has(.tnt-start-icon)) {
+                    padding-top: 8px;
+                    .tnt-label {
+                        transform: scale(0.75) translateY(-50px);
+                    }
+                }
+
+                &:has(.tnt-start-icon) {
+                    .tnt-label {
+                        transform: scale(0.75) translate(-50px,-38px)
+                    }
+                }
+            }
+
+            &:has(input:focus), &:has(input:active) {
+                .tnt-label {
+                    color: base.$tint-color;
+                }
+            }
+        }
+    }
+
+    &.tnt-form-filled {
+        border-bottom: 1px solid colors.$tnt-color-outline-variant;
+        border-radius: 4px 4px 0 0;
+        background-color: base.$background-color;
+        grid-template-rows: 68px; // +1 from border-bottom
+
+        &:after {
+            position: absolute;
+            content: '';
+            bottom: 0;
+            height: 2px;
+            width: 100%;
+            left: 0;
+            bottom: 0;
+            background-color: var(--tnt-input-tint-color);
+            transform: rotateY(90deg);
+            transition: 250ms ease-out;
+        }
+
+        &:hover {
+            background-color: color-mix(in srgb, base.$tint-color 15%, base.$background-color);
+        }
+
+        &:has(input:focus), &:has(input:active) {
+            &:after {
+                transform: rotateY(0deg);
+            }
+        }
+
+        &:has(.tnt-label) {
+            &:has(input:not(:placeholder-shown)), &:has(input:focus), &:has(input:active), &.tnt-placeholder {
+                .tnt-label {
+                    transform-origin: left;
+                    transform: scale(0.75) translateY(-32px);
+                }
+            }
+
+            &:has(input:focus), &:has(input:active) {
+                .tnt-label {
+                    color: base.$tint-color;
+                }
+            }
+
+            ::deep {
+
+                input:not(:placeholder-shown), input:focus, input:active {
+                    transform: translateY(8px)
+                }
+            }
+        }
+
+        &.tnt-placeholder:has(.tnt-label) {
+            ::deep {
+                input {
+                    transform: translateY(8px);
+                }
+            }
+        }
+    }
 
     .tnt-input-progress {
         grid-area: progress;
