--- a/TnTComponents/Form/TnTInputRadio.razor.scss
+++ b/TnTComponents/Form/TnTInputRadio.razor.scss
@@ -1,284 +1,221 @@
-﻿//@use '../Styles/_Variables/_colors.scss' as colors;
-//@use '../Styles/_Variables/_typescale.scss' as typescale;
+﻿@use '_inputBase.scss' as base;
+@use '../Styles/_Variables/_colors.scss' as colors;
+@use '../Styles/_Variables/_typescale.scss' as typescale;
+.tnt-radio-input {
+    position: relative;
+    display: inline-grid;
+    width: 100%;
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    grid-template-areas: "pad1 radio pad2 label pad3";
+    grid-template-columns: 16px 20px 16px 1fr 16px;
+    caret-color: base.$tint-color;
+    cursor: pointer;
+    color: base.$text-color;
+    transition: 250ms ease-in-out;
+    grid-template-rows: 20px;
+    margin: 8px 0;
 
-//$error-color: var(--tnt-input-error-color);
-//$text-color: var(--tnt-input-text-color);
-//$tint-color: var(--tnt-input-tint-color);
-//$background-color: var(--tnt-input-background-color);
+    @include base.tnt-label(label);
 
-//.tnt-radio-input {
-//    position: relative;
-//    display: inline-grid;
-//    width: 100%;
-//    box-sizing: border-box;
-//    -webkit-box-sizing: border-box;
-//    -moz-box-sizing: border-box;
-//    grid-template-areas: "pad1 radio pad2 label pad3";
-//    grid-template-columns: 16px 20px 16px 1fr 16px;
-//    caret-color: $tint-color;
-//    cursor: pointer;
-//    color: $text-color;
-//    transition: 250ms ease-in-out;
-//    grid-template-rows: 20px;
-//    margin: 8px 0;
+    &:has(.tnt-start-icon):has(.tnt-end-icon) {
+        grid-template-areas: "pad1 start-icon pad2 radio pad3 label end-icon pad4";
+        grid-template-columns: 12px 24px 16px 20px 16px 1fr 16px 24px 12px;
+    }
 
-//    .tnt-label {
-//        position: absolute;
-//        transition: 250ms ease-in-out;
-//        box-sizing: border-box;
-//        grid-area: label;
-//        align-self: center;
-//        z-index: 1;
-//        @include typescale.tnt-body-large;
-//    }
+    &:has(.tnt-start-icon):not(:has(.tnt-end-icon)) {
+        grid-template-areas: "pad1 start-icon pad2 radio pad3 label pad4";
+        grid-template-columns: 12px 24px 16px 20px 16px 1fr 16px;
+    }
 
+    &:has(.tnt-end-icon):not(:has(.tnt-start-icon)) {
+        grid-template-areas: "pad1 radio pad2 label pad3 end-icon pad4";
+        grid-template-columns: 16px 20px 16px 1fr 16px 24px 12px;
+    }
 
-//    &:has(.tnt-start-icon):has(.tnt-end-icon) {
-//        grid-template-areas: "pad1 start-icon pad2 radio pad3 label end-icon pad4";
-//        grid-template-columns: 12px 24px 16px 20px 16px 1fr 16px 24px 12px;
-//    }
+    @include base.disabled-and-readonly;
 
-//    &:has(.tnt-start-icon):not(:has(.tnt-end-icon)) {
-//        grid-template-areas: "pad1 start-icon pad2 radio pad3 label pad4";
-//        grid-template-columns: 12px 24px 16px 20px 16px 1fr 16px;
-//    }
+    .tnt-radio-button {
+        width: 20px;
+        grid-area: radio;
+        height: 20px;
+        box-sizing: border-box;
+        border-radius: 50%;
+        border: 2px solid colors.$tnt-color-outline;
+        position: relative;
+        transition: border-color linear 100ms;
 
-//    &:has(.tnt-end-icon):not(:has(.tnt-start-icon)) {
-//        grid-template-areas: "pad1 radio pad2 label pad3 end-icon pad4";
-//        grid-template-columns: 16px 20px 16px 1fr 16px 24px 12px;
-//    }
+        &:before {
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            border-radius: inherit;
+            box-sizing: border-box;
+            transition: transform ease-in-out 100ms;
+            transform: scale(0);
+            transform-origin: 50% 50%;
+        }
+    }
 
-//    &:has(input[readonly]) {
-//        pointer-events: none;
-//        opacity: 0.7;
-//    }
+    input {
+        @include base.default-input(radio);
+    }
 
-//    &.tnt-disabled {
-//        pointer-events: none;
-//        opacity: 0.5 !important;
-//        user-select: none;
-//    }
+    ::deep {
+        @include base.default-icon;
+        @include base.supporting-text;
+    }
 
-//    .tnt-radio-button {
-//        width: 20px;
-//        grid-area: radio;
-//        height: 20px;
-//        box-sizing: border-box;
-//        border-radius: 50%;
-//        border: 2px solid colors.$tnt-color-outline;
-//        position: relative;
-//        transition: border-color linear 100ms;
+    &:has(input:checked) {
+        .tnt-label {
+            color: base.$tint-color;
+        }
 
-//        &:before {
-//            content: '';
-//            position: absolute;
-//            width: 100%;
-//            height: 100%;
-//            top: 0;
-//            left: 0;
-//            border-radius: inherit;
-//            box-sizing: border-box;
-//            transition: transform ease-in-out 100ms;
-//            transform: scale(0);
-//            transform-origin: 50% 50%;
-//        }
-//    }
+        .tnt-radio-button {
+            border-color: base.$tint-color;
 
-//    input {
-//        grid-area: text;
-//        box-sizing: border-box;
-//        appearance: none;
-//        border: none;
-//        outline: none;
-//        background-color: transparent;
-//        color: inherit;
-//        caret-color: inherit;
-//        height: fit-content;
-//        width: 100%;
-//        align-self: center;
-//        transition: 250ms ease-in-out;
-//        padding: 2px 0;
-//        grid-area: radio;
-//        position: absolute;
-//        @include typescale.tnt-body-large;
+            &:before {
+                transform: scale(0.7);
+                background-color: base.$tint-color;
+            }
+        }
+    }
 
-//        &:placeholder {
-//            opacity: 0.5;
-//        }
+    &.tnt-form-filled {
+        border-bottom: 1px solid colors.$tnt-color-outline-variant;
+        border-radius: 4px 4px 0 0;
+        background-color: base.$background-color;
+        grid-template-rows: 55px; // +1 from border-bottom
+        &:after {
+            position: absolute;
+            content: '';
+            bottom: 0;
+            height: 2px;
+            width: 100%;
+            left: 0;
+            bottom: 0;
+            background-color: var(--tnt-input-tint-color);
+            transform: rotateY(90deg);
+            transition: 250ms ease-out;
+        }
 
-//        &::-webkit-autofill,
-//        &::-webkit-autofill:hover,
-//        &::-webkit-autofill:focus,
-//        &::-webkit-autofill:active {
-//            -webkit-background-clip: text;
-//            color: $text-color;
-//        }
-//    }
+        &:hover {
+            background-color: color-mix(in srgb, base.$tint-color 15%, base.$background-color);
+        }
 
-//    ::deep {
-//        .tnt-start-icon {
-//            grid-area: start-icon;
-//        }
+        &:has(input:focus), &:has(input:active) {
+            &:after {
+                transform: rotateY(0deg);
+            }
+        }
 
-//        .tnt-end-icon {
-//            grid-area: end-icon;
-//        }
+        &:has(.tnt-label) {
+            &:has(input:not(:placeholder-shown)), &:has(input:focus), &:has(input:active), &.tnt-placeholder {
+                .tnt-label {
+                    transform-origin: left;
+                    transform: scale(0.75) translateY(-20px);
+                }
+            }
 
-//        .tnt-start-icon, .tnt-end-icon {
-//            align-self: center;
-//            justify-self: center;
-//        }
+            &:has(input:focus), &:has(input:active) {
+                .tnt-label {
+                    color: base.$tint-color;
+                }
+            }
 
-//        .tnt-supporting-text {
-//            position: absolute;
-//            top: calc(100% + 4px);
-//            left: 16px;
-//            width: calc(100% - 32px - 7ch);
-//            text-wrap: wrap;
-//            color: $text-color;
-//            @include typescale.tnt-body-small;
-//        }
+            ::deep {
+                input:not(:placeholder-shown), input:focus, input:active {
+                    transform: translateY(8px)
+                }
+            }
+        }
 
-//        @for $i from 1 through 5 {
-//            *:nth-child(#{$i} of .tnt-supporting-text) {
-//                transform: translateY(calc(12px * ($i - 1))) !important;
-//            }
-//        }
-//    }
+        &.tnt-placeholder:has(.tnt-label) {
+            ::deep {
+                input {
+                    transform: translateY(8px);
+                }
+            }
+        }
+    }
 
-//    .tnt-validation-message {
-//        color: $error-color;
-//    }
+    &.tnt-form-outlined {
+        border-radius: 4px;
+        background-color: transparent;
+        grid-template-rows: 56px;
+        outline: 1px solid colors.$tnt-color-outline;
 
-//    &:has(input:checked) {
-//        .tnt-label {
-//            color: $tint-color;
-//        }
+        &:before, &:after {
+            content: '';
+            position: absolute;
+            width: calc(100% + 2px);
+            background-color: transparent;
+            border-radius: 4px;
+            box-sizing: border-box;
+            border-color: base.$tint-color;
+            border-style: solid;
+            border-radius: inherit;
+            height: calc(100% + 2px);
+            top: -1px;
+            left: -1px;
+            transition: 250ms ease-in-out;
+        }
 
-//        .tnt-radio-button {
-//            border-color: $tint-color;
+        &:before {
+            border-left-width: 2px;
+            border-right-width: 2px;
+            border-top-width: 0;
+            border-bottom-width: 0;
+            transform: rotateX(90deg);
+        }
 
-//            &:before {
-//                transform: scale(0.7);
-//                background-color: $tint-color;
-//            }
-//        }
-//    }
-    //&.tnt-form-filled {
-    //    border-bottom: 1px solid colors.$tnt-color-outline-variant;
-    //    border-radius: 4px 4px 0 0;
-    //    background-color: $background-color;
-    //    grid-template-rows: 55px; // +1 from border-bottom
-    //    &:after {
-    //        position: absolute;
-    //        content: '';
-    //        bottom: 0;
-    //        height: 2px;
-    //        width: 100%;
-    //        left: 0;
-    //        bottom: 0;
-    //        background-color: var(--tnt-input-tint-color);
-    //        transform: rotateY(90deg);
-    //        transition: 250ms ease-out;
-    //    }
-    //    &:hover {
-    //        background-color: color-mix(in srgb, $tint-color 15%, $background-color);
-    //    }
-    //    &:has(input:focus), &:has(input:active) {
-    //        &:after {
-    //            transform: rotateY(0deg);
-    //        }
-    //    }
-    //    &:has(.tnt-label) {
-    //        &:has(input:not(:placeholder-shown)), &:has(input:focus), &:has(input:active), &.tnt-placeholder {
-    //            .tnt-label {
-    //                transform-origin: left;
-    //                transform: scale(0.75) translateY(-20px);
-    //            }
-    //        }
-    //        &:has(input:focus), &:has(input:active) {
-    //            .tnt-label {
-    //                color: $tint-color;
-    //            }
-    //        }
-    //        ::deep {
-    //            input:not(:placeholder-shown), input:focus, input:active {
-    //                transform: translateY(8px)
-    //            }
-    //        }
-    //    }
-    //    &.tnt-placeholder:has(.tnt-label) {
-    //        ::deep {
-    //            input {
-    //                transform: translateY(8px);
-    //            }
-    //        }
-    //    }
-    //}
-    //&.tnt-form-outlined {
-    //    border-radius: 4px;
-    //    background-color: transparent;
-    //    grid-template-rows: 56px;
-    //    outline: 1px solid colors.$tnt-color-outline;
-    //    &:before, &:after {
-    //        content: '';
-    //        position: absolute;
-    //        width: calc(100% + 2px);
-    //        background-color: transparent;
-    //        border-radius: 4px;
-    //        box-sizing: border-box;
-    //        border-color: $tint-color;
-    //        border-style: solid;
-    //        border-radius: inherit;
-    //        height: calc(100% + 2px);
-    //        top: -1px;
-    //        left: -1px;
-    //        transition: 250ms ease-in-out;
-    //    }
-    //    &:before {
-    //        border-left-width: 2px;
-    //        border-right-width: 2px;
-    //        border-top-width: 0;
-    //        border-bottom-width: 0;
-    //        transform: rotateX(90deg);
-    //    }
-    //    &:after {
-    //        border-top-width: 2px;
-    //        border-bottom-width: 2px;
-    //        border-left-width: 0;
-    //        border-right-width: 0;
-    //        transform: rotateY(90deg);
-    //    }
-    //    &:hover {
-    //        background-color: color-mix(in srgb, $tint-color 15%, transparent);
-    //    }
-    //    &:has(input:focus), &:has(input:active) {
-    //        &:before {
-    //            transform: rotateX(0deg);
-    //        }
-    //        &:after {
-    //            transform: rotateY(0deg);
-    //        }
-    //    }
-    //    &:has(.tnt-label) {
-    //        &:has(input:not(:placeholder-shown)), &:has(input:focus), &:has(input:active), &.tnt-placeholder {
-    //            .tnt-label {
-    //                transform-origin: left;
-    //                transform: scale(0.75) translateY(-38px);
-    //                background-color: $background-color;
-    //                padding: 0 4px;
-    //            }
-    //            &:has(.tnt-start-icon) {
-    //                .tnt-label {
-    //                    transform: scale(0.75) translate(-50px,-38px)
-    //                }
-    //            }
-    //        }
-    //        &:has(input:focus), &:has(input:active) {
-    //            .tnt-label {
-    //                color: $tint-color;
-    //            }
-    //        }
-    //    }
-    //}
-//}
+        &:after {
+            border-top-width: 2px;
+            border-bottom-width: 2px;
+            border-left-width: 0;
+            border-right-width: 0;
+            transform: rotateY(90deg);
+        }
+
+        &:hover {
+            background-color: color-mix(in srgb, base.$tint-color 15%, transparent);
+        }
+
+        &:has(input:focus), &:has(input:active) {
+            &:before {
+                transform: rotateX(0deg);
+            }
+
+            &:after {
+                transform: rotateY(0deg);
+            }
+        }
+
+        &:has(.tnt-label) {
+            &:has(input:not(:placeholder-shown)), &:has(input:focus), &:has(input:active), &.tnt-placeholder {
+                .tnt-label {
+                    transform-origin: left;
+                    transform: scale(0.75) translateY(-38px);
+                    background-color: base.$background-color;
+                    padding: 0 4px;
+                }
+
+                &:has(.tnt-start-icon) {
+                    .tnt-label {
+                        transform: scale(0.75) translate(-50px,-38px)
+                    }
+                }
+            }
+
+            &:has(input:focus), &:has(input:active) {
+                .tnt-label {
+                    color: base.$tint-color;
+                }
+            }
+        }
+    }
+}
