--- a/TnTComponents/Layout/TnTBody.razor.scss
+++ b/TnTComponents/Layout/TnTBody.razor.scss
@@ -1,3 +1,10 @@
-﻿.tnt-layout > .tnt-body {
+﻿
+$background-color: var(--tnt-layout-background-color);
+$text-color: var(--tnt-layout-text-color);
+
+.tnt-layout > .tnt-body {
     grid-area: body;
+    overflow-y: auto;
+    background-color: $background-color;
+    color: $text-color;
 }
