Add DisableToggle and Disabled properties to TnTChip
- Introduced `DisableToggle` and `Disabled` parameters in `Chips.razor` for enhanced chip functionality.
- Updated `TnTChip.cs` to include new properties and removed unnecessary using directives.
- Restructured `TnTChip.razor` for improved rendering and event handling.
- Modified `TnTChip.razor.cs` to ensure new properties have default values.
- Enhanced styles in `TnTChip.razor.scss` to reflect new properties and improve visual representation.

--- a/LiveTest/LiveTest.Client/Pages/Chips.razor
+++ b/LiveTest/LiveTest.Client/Pages/Chips.razor
@@ -3,9 +3,9 @@
 @rendermode InteractiveAuto
 
 
-<TnTComponents.TnTChip Label="Chip" @bind-Value="_a" BindAfter="Checked" />
+<TnTComponents.TnTChip Label="Chip" @bind-Value="_a" BindAfter="Checked" DisableToggle="true" />
 <TnTComponents.TnTChip StartIcon="@MaterialIcon.GridOn" Label="Chip" BindAfter="Checked" @bind-Value="_b" />
-<TnTComponents.TnTChip Label="Chip" CloseButtonClicked="@Closed" @bind-Value="_c" BindAfter="Checked" />
+<TnTComponents.TnTChip Label="Chip" CloseButtonClicked="@Closed" @bind-Value="_c" BindAfter="Checked" Disabled="true" />
 <TnTComponents.TnTChip StartIcon="@MaterialIcon.GridOn" Label="Chip" CloseButtonClicked="@Closed" BindAfter="Checked" @bind-Value="_d" />
 
 
